2002-09-11  Ion Badulescu  <ion@guppy.limebrokerage.com>

	Debug code sanitization:

	- amuDebug() becomes an expression, and explicit if() statements
	are added around it throughout the code
	- amuDebugNo() goes away (ugh!)
	- D_AMQ, D_DAEMON and D_FORK reverse their meaning
	- D_ALL contains only options that don't affect amd's functionality

2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (free_continuation): avoid double-free'ing the
	mntfs if there was an error/timeout

2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): use ereturn() instead
	of "return NULL" to signal an error to the upper layers
	(amfs_auto_mount): use strdup so the string can be free'd later on
	[Debian bug report from Matt Chapman <matthewc@cse.unsw.edu.au>]

2002-09-03  Ion Badulescu  <ion@guppy.limebrokerage.com>

	Patches from George Ross <gdmr@dcs.ed.ac.uk>:

	* amd/amfs_auto.c (assign_error_mntfs): do not discard old mntfs,
	it will be done in free_continuation(); assorted debugging messages

	* amd/srvr_nfs.c (nfs_timed_out): allocate a new XID on server
	timeout to avoid problems with late ping replies

	* amd/mntfs.c (free_mntfs): sanity check for mf_refc; assorted
	debugging messages

	* amd/map.c (unmount_node): more verbose debug message

2002-07-29  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): prevent deferencing
	de-allocated memory in str3cat
	(amfs_auto_lookup_mntfs): check for buffer overflow

2002-07-11  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* scripts/expn.{1,in}: fixed typos as reported by Thomas Klausner
	<wiz@danbala.ifoer.tuwien.ac.at>.

2002-06-26  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* doc/Makefile.am (install-html): don't use locally hacked
	texi2html features.

	* conf/transp/transp_sockets.c (amu_get_myaddress): Most modern
	systems should use 127.0.0.1 as the localhost address over which