@@ -1,3 +1,13 @@
+2002-09-17  Ion Badulescu  <ion@guppy.limebrokerage.com>
+
+	* libamu/xutil.c (dbg_opt): bring comments in line with the code
+
+	* hlfsd/hlfsd.c (main): use amuDebug() instead of touching
+	debug_flags directly
+
+	* amd/amd.c (main): don't init debug_flags, leave it as zero (no
+	debugging by default)
+
 2002-09-11  Ion Badulescu  <ion@guppy.limebrokerage.com>
 
 	Debug code sanitization:
